# InstaDupe

.github/workflows/: deploy.yml
routes/: _app.tsx
server/: dockerfile  pyproject.toml
server/InstagramTools/: main.py
server/InstagramTools/routers/: __init__.py  friends.py
web/: deno.json  tailwind.config.ts
web/src/: fresh.gen.ts
web/src/islands/: Counter.tsx
web/src/routes/: _app.tsx  index.tsx
web/src/routes/api/: insta.ts
