[tool.poetry]
name = "InstagramTools"
version = "0.2.0"
description = ""
authors = ["Monsignor <21285741+MonsignorEduardo@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "InstagramTools", from = "." }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]


[tool.poetry.dependencies]
python = "^3.12"
instagrapi = "^2.0.1"
fastapi = "^0.108.0"
uvicorn = { extras = ["standard"], version = "^0.25.0" }
pillow = "^10.2.0"
structlog = "^23.3.0"
ddtrace = "^2.4.0"
asgi-correlation-id = "^4.2.0"
pydantic = "2.5.2"
loguru = "^0.7.2"
gunicorn = "^21.2.0"
orjson = "^3.9.10"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
[tool.black]
line-length = 110


# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "A",   # flakes8-builtins
    "COM", # flakes8-commas
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "I",   # isort
    "N",   # pep8 naming
    "UP",  # pyupgrade  
    "S",   # bandit
]
ignore = ["S101"] #Assert statements should be used in tests

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
